# AMES-GRBAfterglow

./: .AMES.i.swp  .LICENSE.swp  .README.md.swp  AMES.i  CMakeLists.txt  README.md  install.sh  log.txt
example/GRBAfterglow/: .flux.py.swp  .flux_vector.py.swp  GRB_GS02.py  flux.py  flux_vector.py
include/: .GRBAfterglow.hpp.swp  GRBAfterglow.hpp
include/module/: constants.hpp  electrondistribution.hpp  gammagamma.hpp  inversecompton.hpp  particle.hpp  photonbackground.hpp  rk5.hpp  source.hpp  synchrotron.hpp  utility.hpp
src/: .GRBAfterglow.cpp.swp  GRBAfterglow.cpp
src/module/: .electrondistribution.cpp.swp  electrondistribution.cpp  gammagamma.cpp  inversecompton.cpp  particle.cpp  photonbackground.cpp  source.cpp  synchrotron.cpp  utility.cpp
